src/objects/CMIT13_Zuora_WS_Setting__mdt.object
<CustomObject>
    <label>Zuora WS Setting</label>
    <pluralLabel>Zuora WS Settings</pluralLabel>
    <fields>
        <fullName>IT_PROD_ClientId__c</fullName>
        <label>PROD ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_PROD_ClientSecret__c</fullName>
        <label>PROD ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_PROD_Endpoint__c</fullName>
        <label>PROD Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_SDX_ClientId__c</fullName>
        <label>SDX ClientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_SDX_ClientSecret__c</fullName>
        <label>SDX ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_SDX_Endpoint__c</fullName>
        <label>SDX Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>